# cruthu-lonruil

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.md  compile_commands.txt  default.vert  planning.txt  test.txt
assets/: donut.fbx
dependencies/include/: graphics.h
dependencies/include/assimp/: revision.h
dependencies/include/glad/: glad.h
dependencies/lib/: libassimp.5.dylib
include/: clmath.h
include/input/: inputManager.h
include/physics/: aabb.h  physicsEngine.h
include/render/: mesh.h  model.h  texture.h  vertex.h
include/render/2D/: circle.h  rect.h
include/render/3D/: sphere.h
include/util/: clerr.h
include/window/: clwindow.h
shader/: aabb.frag  aabb.vert  container.frag  container.vert  default.frag  default.vert  model.frag  model.vert  phong.frag  phong.vert
src/: glad.c  main.c  main.cpp  time.cpp  time.h  types.h
src/event/: event.cpp  events.c  events.h
src/input/: inputManager.cpp  inputManager.h
src/math/: clmath.h
src/physics/: physicsEngine.cpp  physicsEngine.h
src/render/: mesh.cpp  model.cpp  shader.cpp  texture.cpp
src/render/primitives/2D/: rect.cpp
src/renderer/: Model.cpp  Model.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Vertex.h  renderer.h  window.c  window.h
src/renderer/primitives/: 2D.h
src/renderer/primitives/2D/: circle.h  rect.cpp  rect.h
src/renderer/primitives/3D/: cube.h
src/util/: clfile.cpp
src/utils/: cl_file.c  cl_file.h  clfile.cpp  clfile.h
src/window/: clwindow.cpp  clwindow.h
